8329783: Fatal exception loading jfxshaders.metallib with jlink or system tests